mongoCommandTest.txt
Microsoft Windows [Version 10.0.22631.4317]
(c) Microsoft Corporation. All rights reserved.

C:\Users\sameer>mongosh
Current Mongosh Log ID: 671c8d9924ddcc166d86b01c
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.2
Using MongoDB:          8.0.1
Using Mongosh:          2.3.2

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2024-10-24T09:46:34.113+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> db.createCollection("users")
{ ok: 1 }
test> show dbs
admin   40.00 KiB
config  72.00 KiB
dommy   72.00 KiB
local   72.00 KiB
test     8.00 KiB
test> db.users.insertMany([
... {
... name: "Alice",
... email: "alice@example.com",
... age: 30,
... createdAt: new Date("2022-01-15"),
... isActive: true,
... hobbies: ["reading", "hiking"]
... },
... {
... name: "Bob",
... email: "bob@example.com",
... age: 25,
... createdAt: new Date("2023-03-22"),
... isActive: false,
... hobbies: ["gaming", "cooking"]
... }
... ]);
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('671c8e0b24ddcc166d86b01d'),
    '1': ObjectId('671c8e0b24ddcc166d86b01e')
  }
}
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'alice@example.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01e'),
    name: 'Bob',
    email: 'bob@example.com',
    age: 25,
    createdAt: ISODate('2023-03-22T00:00:00.000Z'),
    isActive: false,
    hobbies: [ 'gaming', 'cooking' ]
  }
]
test> db.users.insertOne({name:"sameer",eamil:"sameerab827@gmail.com",age:24})
{
  acknowledged: true,
  insertedId: ObjectId('671c8eb124ddcc166d86b01f')
}
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'alice@example.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01e'),
    name: 'Bob',
    email: 'bob@example.com',
    age: 25,
    createdAt: ISODate('2023-03-22T00:00:00.000Z'),
    isActive: false,
    hobbies: [ 'gaming', 'cooking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 24
  }
]
test> db.users.find({eamil:"alice@example.com"})

test> db.users.find({eamil:'alice@example.com'})

test> db.users.findOne({eamil:'alice@example.com'})
null
test> db.users.findOne({eamil:'sameerab827@gmail.com'})
{
  _id: ObjectId('671c8eb124ddcc166d86b01f'),
  name: 'sameer',
  eamil: 'sameerab827@gmail.com',
  age: 24
}
test> db.users.updateOne({name:'sameer'},{$set :{age:27}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'alice@example.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01e'),
    name: 'Bob',
    email: 'bob@example.com',
    age: 25,
    createdAt: ISODate('2023-03-22T00:00:00.000Z'),
    isActive: false,
    hobbies: [ 'gaming', 'cooking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 27
  }
]
test> db.users.updateOne({ _id: ObjectId('671c8eb124ddcc166d86b01f')},{$set :{email:'abc@gmil.com'}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'alice@example.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01e'),
    name: 'Bob',
    email: 'bob@example.com',
    age: 25,
    createdAt: ISODate('2023-03-22T00:00:00.000Z'),
    isActive: false,
    hobbies: [ 'gaming', 'cooking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 27,
    email: 'abc@gmil.com'
  }
]
test> db.users.updateOne({  isActive: true,},{$set :{email:'abc@gmil.com'}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'abc@gmil.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01e'),
    name: 'Bob',
    email: 'bob@example.com',
    age: 25,
    createdAt: ISODate('2023-03-22T00:00:00.000Z'),
    isActive: false,
    hobbies: [ 'gaming', 'cooking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 27,
    email: 'abc@gmil.com'
  }
]
test> db.users.count()
DeprecationWarning: Collection.count() is deprecated. Use countDocuments or estimatedDocumentCount.
3
test> db.users.deleteMany({  isActive: false})
{ acknowledged: true, deletedCount: 1 }
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'abc@gmil.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 27,
    email: 'abc@gmil.com'
  }
]
test> db.users.find({hobbies:['hiking']})

test> db.users.find({hobbies:{'hiking'}})
Uncaught:
SyntaxError: Unexpected token (1:32)

> 1 | db.users.find({hobbies:{'hiking'}})
    |                                 ^
  2 |

test> db.users.find({hobbies:'hiking'})
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'abc@gmil.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  }
]
test> db.users.find()
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'abc@gmil.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  },
  {
    _id: ObjectId('671c8eb124ddcc166d86b01f'),
    name: 'sameer',
    eamil: 'sameerab827@gmail.com',
    age: 27,
    email: 'abc@gmil.com'
  }
]
test> db.users.find({age:{$gt:25},hobbies:'reading'})
[
  {
    _id: ObjectId('671c8e0b24ddcc166d86b01d'),
    name: 'Alice',
    email: 'abc@gmil.com',
    age: 30,
    createdAt: ISODate('2022-01-15T00:00:00.000Z'),
    isActive: true,
    hobbies: [ 'reading', 'hiking' ]
  }
]
test> db.users.deleteMany({age:{$lt:30},hobbies:{$ne:"hiking"}})

{ acknowledged: true, deletedCount: 1 }
test>